implemented action body interpolation
